# beets-inbox

./: .gitignore  flake.nix  justfile  specs.md
.zed/: settings.json
backend/: pyproject.toml
backend/music_importer/: config.py  db.py  main.py  models.py
backend/music_importer/api/: inbox.py  jobs.py
backend/music_importer/services/: beets.py  inbox.py
backend/tests/: conftest.py  test_beets.py  test_flat_catalog.py  test_inbox.py
frontend/: elm.json
frontend/src/: Api.elm  Main.elm  Types.elm
frontend/src/Pages/: Inbox.elm  Jobs.elm
nix/: elm-srcs.nix  module.nix
scripts/: make_test_fixtures.py  validate-beets.sh
test-fixtures/: gen-silent-wav.py  standalone.flac
test-fixtures/Inbox Album/: 01 - Opening.flac  02 - Interlude.flac  03 - Closing.flac
