[project]
name = "beets-inbox"
version = "0.1.0"
description = "Self-hosted music inbox for beets"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "watchdog>=6.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "ruff>=0.8",
]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "mutagen>=1.47",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
